# wasm-book

./: .gitignore  CMakeLists.txt  sdl-things.md
01/: hello.c  hello.js  hello.sh  hello.wasm  hello2.sh  new_shell.html
01/shell/: compile.sh  new_shell.html  run.sh  shell-test.html  shell-test.js  shell-test.wasm  shell.c
04/: hello_sdl.js  hello_sdl.wasm  sprite.html  sprite.js  sprite.wasm  sprite_animation.html  sprite_animation.js  sprite_animation.wasm  sprite_move.js  sprite_move.wasm
05/1-js-kb-input/: .gitignore  compile.sh
05/2-sdl-kb-input/: .gitignore  compile.sh
05/3-kb-move-sprite/: .gitignore  compile.sh
06/1-basic-game-loop/: .gitignore  compile.sh
06/2-game-object/: .gitignore  compile.sh
07/: .gitignore  compile.sh
08/: compile.sh
09/1-new-config-tool/: .gitignore  compile.sh
09/2-new-particle-system/: .gitignore  compile.sh
10/: .gitignore  compile.sh
11-sdl/1-locked-on-camera/: CMakeLists.txt  asteroid.cpp  current_dir.h  emitter.cpp  game.hpp  locator.cpp  main.cpp  projectile.cpp  (+4 more)
11-sdl/2-advanced-camera/: CMakeLists.txt  asteroid.cpp  camera.js  enemy_ship.cpp  game.hpp  main.cpp  player_ship.cpp  render_manager.cpp  shield.cpp  ship.cpp  star.cpp
12/: compile.sh  sound_fx.js  sound_fx.wasm
12-sdl/: CMakeLists.txt
13/: physics.js
13-sdl/: CMakeLists.txt  asteroid.cpp  compile.sh  game.hpp  main.cpp  physics.wasm
14/: ui.js  ui.wasm
14-sdl/: CMakeLists.txt  compile.sh  game.hpp  main.cpp  render_manager.cpp  ship.cpp  star.cpp
config/: current_dir.h.in
tutorial/: a.out.js  hello.html  hello.js  hello.wasm
(+15 files in other folders)
